# tetrika_test_task

./: .env.template  .gitignore  Makefile  README.md  pyproject.toml
src/task1/: solution.py  test_for_task1.py
src/task2/: solution.py  test_for_task2.py
src/task3/: solution.py  test_for_task3.py
